# Aiogram-3-TEmplate

./: .env.dist  README.md  bot.py  pyproject.toml  requirements.txt  setup.py
data/: checking.py
database/: db_utils.py  functions.py  models.py
filters/: channel_filter.py  group_filter.py  user_filter.py
handlers/: __init__.py
handlers/admin/: __init__.py  admin.py
handlers/channel/: channel.py
handlers/group/: group.py
handlers/users/: __init__.py  users.py
utils/: set_bot_commands.py
