[tool.poetry]
name = "project"
version = "1"
description = "aiogram 3 template"
authors = ["Rafkix <https://t.me/rafkix_comunity>"]
license = "-"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.16.0"
python-dotenv = "^1.0.1"
aiosqlite = "0.17.0"
sqlalchemy = "2.0.0"
environs = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
